--- a/texs/reference.bib
+++ b/texs/reference.bib
@@ -88,6 +88,88 @@ month={March}
   size =         "11 pages",
 }
 
+
+
+@article{
+	Seq2Tree,
+  author    = {Pengcheng Yin and
+               Graham Neubig},
+  title     = {A Syntactic Neural Model for General-Purpose Code Generation},
+  journal   = {CoRR},
+  volume    = {abs/1704.01696},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1704.01696},
+  archivePrefix = {arXiv},
+  eprint    = {1704.01696},
+  timestamp = {Mon, 13 Aug 2018 16:47:27 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/YinN17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+
+@article{
+	attention_paper,
+  author    = {Dzmitry Bahdanau and
+               Kyunghyun Cho and
+               Yoshua Bengio},
+  title     = {Neural Machine Translation by Jointly Learning to Align and Translate},
+  journal   = {CoRR},
+  volume    = {abs/1409.0473},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.0473},
+  archivePrefix = {arXiv},
+  eprint    = {1409.0473},
+  timestamp = {Mon, 13 Aug 2018 16:46:05 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/BahdanauCB14},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+
+
+@article{
+	seq2seq,
+  author    = {Ilya Sutskever and
+               Oriol Vinyals and
+               Quoc V. Le},
+  title     = {Sequence to Sequence Learning with Neural Networks},
+  journal   = {CoRR},
+  volume    = {abs/1409.3215},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.3215},
+  archivePrefix = {arXiv},
+  eprint    = {1409.3215},
+  timestamp = {Mon, 13 Aug 2018 16:48:06 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/SutskeverVL14},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{
+	first_LSTM,
+ author = {Hochreiter, Sepp and Schmidhuber, J\"{u}rgen},
+ title = {Long Short-Term Memory},
+ journal = {Neural Comput.},
+ issue_date = {November 15, 1997},
+ volume = {9},
+ number = {8},
+ month = nov,
+ year = {1997},
+ issn = {0899-7667},
+ pages = {1735--1780},
+ numpages = {46},
+ url = {http://dx.doi.org/10.1162/neco.1997.9.8.1735},
+ doi = {10.1162/neco.1997.9.8.1735},
+ acmid = {1246450},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
+
+
 @misc{
 	github,
 	author = {},
