--- a/texs/reference.bib
+++ b/texs/reference.bib
@@ -175,3 +175,15 @@ month={March}
 	author = {},
 	note = "\url{https://github.com/}"
 }
+
+@misc{
+	clang,
+	author = {},
+	note = "\url{https://clang.llvm.org/}"
+}
+
+@misc{
+	pycparser,
+	author = {},
+	note = "\url{https://github.com/eliben/pycparser}"
+}
